# Umdeni_Health

./: .gitignore  README.md
backend/: app.py  patients.db  pyproject.toml  requirements.txt  user_db.py  users.db
backend/app/: app.py  auth.py  users.py
backend/app_/: auth.py  database.py  user_db.py
backend/models/: models.py  schemas.py
backend/services/: llama_engine.py  qr_code.py
mobile-app/: package-lock.json  package.json
mobile-app/app/: _layout.tsx  index.tsx  role-select.tsx  translations.ts
mobile-app/app/(auth)/: doctor-login.tsx  family-login.tsx  patient-login.tsx
mobile-app/app/(doctor)/: consult.tsx  dashboard.tsx
mobile-app/app/(family)/: dashboard.tsx
mobile-app/app/(patient)/: dashboard.tsx
mobile-app/app/context/: LanguageContext.tsx
