[project]
name = "backend"
version = "0.1.0"
description = "Backend service for the application"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "alembic>=1.17.2",
    "asyncpg>=0.31.0",
    "fastapi>=0.123.10",
    "fastapi-users[sqlalchemy]>=15.0.1",
    "groq>=0.37.1",
    "jwt>=1.4.0",
    "ollama>=0.6.1",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.12.5",
    "pyjwt>=2.10.1",
    "pyotp>=2.9.0",
    "python-dotenv>=1.2.1",
    "qrcode[pil]>=8.2",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
]
