[project]
name = "backend"
version = "0.1.0"
description = "Backend service for the application"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "alembic>=1.17.2",
    "fastapi>=0.123.10",
    "jwt>=1.4.0",
    "ollama>=0.6.1",
    "passlib[argon2,bcrypt]>=1.7.4",
    "pydantic>=2.12.5",
    "pyjwt>=2.10.1",
    "pyotp>=2.9.0",
    "python-dotenv>=1.2.1",
    "python-jose[cryptography]>=3.5.0",
    "qrcode[pil]>=8.2",
    "sqlalchemy>=2.0.44",
    "sqlmodel>=0.0.27",
    "uvicorn>=0.38.0",
]
